projects/vb6parse/snapshots/tests/library/string/chr/chr_multiple_calls.snap
---
source: projects/vb6parse/tests/library/string/chr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: LineInputStatement
      children:
        - kind: LineKeyword
          text: line
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Chr
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "218"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Chr
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "196"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Chr
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "191"
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
